tests222/tests2/test348.out
lli: <stdin>:1:1: error: expected top-level entity
line 6: type mismatch
^
